# twitter_graphql_parser

./: .gitignore  pyproject.toml  queries.json  requirements.txt  test.ks
.github/workflows/: parse.yml
twitter_graphql_parser/: __init__.py  __main__.py
