[tool.poetry]
name = "twitter-graphql-parser"
version = "0.1.0"
description = ""
authors = ["paranoikcodit <paranoikpidoras@gmail.com>"]
readme = "README.md"
packages = [{include = "twitter_graphql_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
json5 = "^0.9.11"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
beautifulsoup4 = "^4.12.2"
aiohttp-proxy = "^0.1.2"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
